--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -50,6 +49,21 @@
             android:id="@+id/view"
             android:layout_row="1"
             android:layout_column="0"
+            android:gravity="center"
+            android:layout_margin="12dp"
+            android:padding="12dp"
+            android:layout_rowWeight="1"
+            android:layout_columnWeight="1"
+            android:layout_gravity="center"
+            />
+        <TextView
+            android:background="@drawable/button_bg"
+            android:text="Jetpack/MVVM"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="24sp"
+            android:id="@+id/jetpack"
+            android:layout_row="1"
+            android:layout_column="1"
             android:gravity="center"
             android:layout_margin="12dp"
             android:padding="12dp"
