--- a/app/src/main/res/layout/activity_motion_layout.xml
+++ b/app/src/main/res/layout/activity_motion_layout.xml
@@ -5,14 +5,15 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:layoutDescription="@xml/motion_scene"
+    android:id="@+id/motion"
     >
 
-    <TextView
+    <ImageButton
         android:layout_width="64dp"
         android:layout_height="64dp"
         android:background="@drawable/circle_button_bg"
         android:padding="16dp"
-        android:text="菜单"
+        android:src="@drawable/ic_add"
         android:id="@+id/text"
         android:gravity="center"
         android:textColor="@color/white"
