增加 Jetpack paging分页库 LifeCycle WorkMange 使用案例

--- a/app/src/main/res/layout/activity_jetpack_layout.xml
+++ b/app/src/main/res/layout/activity_jetpack_layout.xml
@@ -5,11 +5,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/pro_show"
+        android:indeterminateTint="@color/orange"
+        android:layout_gravity="center"
+        android:visibility="gone"
+        android:elevation="5dp"/>
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/bg_pic"
         android:scaleType="centerCrop"/>
+
 
     <android.support.design.widget.FloatingActionButton
         android:layout_width="wrap_content"
