--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -71,6 +71,36 @@
             android:layout_columnWeight="1"
             android:layout_gravity="center"
             />
+        <TextView
+            android:background="@drawable/button_bg"
+            android:text="Jetpack/Paging"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="24sp"
+            android:id="@+id/paging"
+            android:layout_row="2"
+            android:layout_column="0"
+            android:gravity="center"
+            android:layout_margin="12dp"
+            android:padding="12dp"
+            android:layout_rowWeight="1"
+            android:layout_columnWeight="1"
+            android:layout_gravity="center"
+            />
+        <TextView
+            android:background="@drawable/button_bg"
+            android:text="Jetpack/Lifecycle WorkManage"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="24sp"
+            android:id="@+id/lifecycle"
+            android:layout_row="2"
+            android:layout_column="1"
+            android:gravity="center"
+            android:layout_margin="12dp"
+            android:padding="12dp"
+            android:layout_rowWeight="1"
+            android:layout_columnWeight="1"
+            android:layout_gravity="center"
+            />
 
 
     </GridLayout>
