--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -101,6 +101,21 @@
             android:layout_columnWeight="1"
             android:layout_gravity="center"
             />
+        <TextView
+            android:background="@drawable/button_bg"
+            android:text="Jetpack/DataBinding"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="24sp"
+            android:id="@+id/databinding"
+            android:layout_row="3"
+            android:layout_column="0"
+            android:gravity="center"
+            android:layout_margin="12dp"
+            android:padding="12dp"
+            android:layout_rowWeight="1"
+            android:layout_columnWeight="1"
+            android:layout_gravity="center"
+            />
 
 
     </GridLayout>
