--- a/app/src/main/res/layout/activity_databinding_layout.xml
+++ b/app/src/main/res/layout/activity_databinding_layout.xml
@@ -27,7 +27,7 @@
             android:text="Change"
             android:id="@+id/change"
             android:layout_margin="24dp"
-            app:layout_constraintTop_toBottomOf="@+id/name_tv"
+            app:layout_constraintTop_toBottomOf="@id/name_tv"
             app:layout_constraintLeft_toLeftOf="parent"/>
 
     </android.support.constraint.ConstraintLayout>
