--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context=".MainActivity">
 
     <GridLayout
@@ -13,7 +12,7 @@
         >
         <TextView
             android:background="@drawable/button_bg"
-            android:layout_gravity="center"
+            android:layout_marginTop="12dp"
             android:text="GreenDao"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="24sp"
@@ -21,13 +20,10 @@
             android:layout_row="0"
             android:layout_column="0"
             android:gravity="center"
-            android:layout_margin="12dp"
-            android:padding="12dp"
-            android:layout_rowWeight="1"
-            android:layout_columnWeight="1"
             />
         <TextView
             android:background="@drawable/button_bg"
+            android:layout_marginTop="12dp"
             android:text="DialogFragment"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="24sp"
@@ -35,14 +31,10 @@
             android:layout_row="0"
             android:layout_column="1"
             android:gravity="center"
-            android:layout_margin="12dp"
-            android:padding="12dp"
-            android:layout_rowWeight="1"
-            android:layout_columnWeight="1"
-            android:layout_gravity="center"
             />
         <TextView
             android:background="@drawable/button_bg"
+            android:layout_marginTop="12dp"
             android:text="MotionLayout"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="24sp"
@@ -50,14 +42,10 @@
             android:layout_row="1"
             android:layout_column="0"
             android:gravity="center"
-            android:layout_margin="12dp"
-            android:padding="12dp"
-            android:layout_rowWeight="1"
-            android:layout_columnWeight="1"
-            android:layout_gravity="center"
             />
         <TextView
             android:background="@drawable/button_bg"
+            android:layout_marginTop="12dp"
             android:text="Jetpack/MVVM"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="24sp"
@@ -65,14 +53,10 @@
             android:layout_row="1"
             android:layout_column="1"
             android:gravity="center"
-            android:layout_margin="12dp"
-            android:padding="12dp"
-            android:layout_rowWeight="1"
-            android:layout_columnWeight="1"
-            android:layout_gravity="center"
             />
         <TextView
             android:background="@drawable/button_bg"
+            android:layout_marginTop="12dp"
             android:text="Jetpack/Paging"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="24sp"
@@ -80,14 +64,10 @@
             android:layout_row="2"
             android:layout_column="0"
             android:gravity="center"
-            android:layout_margin="12dp"
-            android:padding="12dp"
-            android:layout_rowWeight="1"
-            android:layout_columnWeight="1"
-            android:layout_gravity="center"
             />
         <TextView
             android:background="@drawable/button_bg"
+            android:layout_marginTop="12dp"
             android:text="Jetpack/Lifecycle WorkManage"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="24sp"
@@ -95,14 +75,10 @@
             android:layout_row="2"
             android:layout_column="1"
             android:gravity="center"
-            android:layout_margin="12dp"
-            android:padding="12dp"
-            android:layout_rowWeight="1"
-            android:layout_columnWeight="1"
-            android:layout_gravity="center"
             />
         <TextView
             android:background="@drawable/button_bg"
+            android:layout_marginTop="12dp"
             android:text="Jetpack/DataBinding"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="24sp"
@@ -110,15 +86,31 @@
             android:layout_row="3"
             android:layout_column="0"
             android:gravity="center"
-            android:layout_margin="12dp"
-            android:padding="12dp"
-            android:layout_rowWeight="1"
-            android:layout_columnWeight="1"
-            android:layout_gravity="center"
             />
 
-
+        <TextView
+            android:background="@drawable/button_bg"
+            android:layout_marginTop="12dp"
+            android:text="Jetpack/RxJava"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="24sp"
+            android:id="@+id/rxjava"
+            android:layout_row="3"
+            android:layout_column="1"
+            android:gravity="center"
+            />
+        <TextView
+            android:background="@drawable/button_bg"
+            android:layout_marginTop="12dp"
+            android:text="Jetpack/ObjectBox"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="24sp"
+            android:id="@+id/objectbox"
+            android:layout_row="4"
+            android:layout_column="0"
+            android:gravity="center"
+            />
     </GridLayout>
 
 
-</LinearLayout>
+</FrameLayout>
