--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -110,6 +110,28 @@
             android:layout_column="0"
             android:gravity="center"
             />
+        <TextView
+            android:background="@drawable/button_bg"
+            android:layout_marginTop="12dp"
+            android:text="Util/DiffUtil"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="24sp"
+            android:id="@+id/diffutil"
+            android:layout_row="4"
+            android:layout_column="1"
+            android:gravity="center"
+            />
+        <TextView
+            android:background="@drawable/button_bg"
+            android:layout_marginTop="12dp"
+            android:text="View/CustomView"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="24sp"
+            android:id="@+id/customview"
+            android:layout_row="5"
+            android:layout_column="0"
+            android:gravity="center"
+            />
     </GridLayout>
 
 
