//自定义ViewGourp recyclerView 的一些用法

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -8,4 +8,7 @@
         <attr name="Wave_color" format="color"></attr>
         <attr name="Wave_text" format="string"></attr>
     </declare-styleable>
+    <declare-styleable name="LoadingSquare">
+        <attr name="square_color" format="color"></attr>
+    </declare-styleable>
 </resources>
