--- a/app/src/main/res/layout/activity_custom_layout.xml
+++ b/app/src/main/res/layout/activity_custom_layout.xml
@@ -24,7 +24,6 @@
           android:layout_height="0dp"
           android:layout_weight="1"
           android:id="@+id/sunny"/>
-
    </LinearLayout>
 
    <LinearLayout
@@ -34,60 +33,51 @@
        android:orientation="vertical"
        android:background="@color/Dark"
        >
-      <com.example.demo.practice.widget.WaveBall
-          android:layout_width="match_parent"
-          android:layout_height="match_parent"
-          app:Wave_color="@color/orange"
-          app:Wave_text="滚"/>
-       <!--<com.example.demo.practice.widget.LoadingBall-->
-           <!--android:layout_width="match_parent"-->
-           <!--android:layout_height="0dp"-->
-           <!--android:layout_weight="1"-->
-           <!--app:text="贴"-->
-          <!--/>-->
+      <LinearLayout
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:orientation="horizontal">
+         <com.example.demo.practice.widget.LoadingSquare
+             android:layout_width="256dp"
+             android:layout_height="256dp"
+             app:square_color="@color/orange"/>
+         <com.example.demo.practice.widget.WaveBall
+             android:layout_width="128dp"
+             android:layout_height="128dp"
+             app:Wave_color="@color/pink"
+             app:Wave_text="分"/>
+         <com.example.demo.practice.widget.WaveBall
+             android:layout_width="128dp"
+             android:layout_height="128dp"
+             app:Wave_color="@color/pink"
+             app:Wave_text="布"/>
+         <com.example.demo.practice.widget.WaveBall
+             android:layout_width="128dp"
+             android:layout_height="128dp"
+             app:Wave_color="@color/pink"
+             app:Wave_text="式"/>
+
+      </LinearLayout>
+
+      <com.example.demo.practice.widget.TitTok
+          android:layout_width="500dp"
+          android:layout_height="500dp" />
+
       <!--<com.example.demo.practice.widget.WaveBall-->
-          <!--android:layout_width="match_parent"-->
-          <!--android:layout_height="0dp"-->
-          <!--android:layout_weight="1"-->
-          <!--app:Wave_text="我"-->
-          <!--app:Wave_color="@color/yellow"-->
-         <!--/>-->
-      <!--<com.example.demo.practice.widget.WaveBall-->
-          <!--android:layout_width="match_parent"-->
-          <!--android:layout_height="0dp"-->
-          <!--android:layout_weight="1"-->
-          <!--app:Wave_text="的"-->
-          <!--app:Wave_color="@color/orange"-->
-         <!--/>-->
-      <!--<com.example.demo.practice.widget.WaveBall-->
-          <!--android:layout_width="match_parent"-->
-          <!--android:layout_height="0dp"-->
-          <!--android:layout_weight="1"-->
-          <!--app:Wave_text="英"-->
+          <!--android:layout_width="200dp"-->
+          <!--android:layout_height="200dp"-->
           <!--app:Wave_color="@color/red"-->
-          <!--/>-->
+          <!--app:Wave_text="哪"/>-->
       <!--<com.example.demo.practice.widget.WaveBall-->
-          <!--android:layout_width="match_parent"-->
-          <!--android:layout_height="0dp"-->
-          <!--android:layout_weight="1"-->
-          <!--app:Wave_text="雄"-->
-          <!--app:Wave_color="@color/pink"-->
-          <!--/>-->
-      <!--<com.example.demo.practice.widget.WaveBall-->
-          <!--android:layout_width="match_parent"-->
-          <!--android:layout_height="0dp"-->
-          <!--android:layout_weight="1"-->
-          <!--app:Wave_text="学"-->
-          <!--app:Wave_color="@color/colorAccent"-->
-
-      <!--<com.example.demo.practice.widget.WaveBall-->
-          <!--android:layout_width="match_parent"-->
-          <!--android:layout_height="0dp"-->
-          <!--android:layout_weight="1"-->
-          <!--app:Wave_text="院"-->
+          <!--android:layout_width="200dp"-->
+          <!--android:layout_height="200dp"-->
           <!--app:Wave_color="@color/blue"-->
-        <!--/>-->
+          <!--app:Wave_text="吒"/>-->
 
+
+      <!--<com.example.demo.practice.widget.TitTok-->
+          <!--android:layout_width="600dp"-->
+          <!--android:layout_height="600dp" />-->
    </LinearLayout>
 
 
