--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -132,6 +132,17 @@
             android:layout_column="0"
             android:gravity="center"
             />
+        <TextView
+            android:background="@drawable/button_bg"
+            android:layout_marginTop="12dp"
+            android:text="View/CustomViewGroup"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="24sp"
+            android:id="@+id/custom_layout_manage"
+            android:layout_row="5"
+            android:layout_column="1"
+            android:gravity="center"
+            />
     </GridLayout>
 
 
