--- a/app/src/main/res/layout/activity_custom_view_layout.xml
+++ b/app/src/main/res/layout/activity_custom_view_layout.xml
@@ -59,9 +59,36 @@
 
       </LinearLayout>
 
-      <com.example.demo.practice.widget.TitTok
-          android:layout_width="500dp"
-          android:layout_height="500dp" />
+      <!--<com.example.demo.practice.widget.TitTok-->
+          <!--android:layout_width="400dp"-->
+          <!--android:layout_height="400dp" />-->
+      <!--<com.example.demo.practice.widget.JumpingButton-->
+          <!--android:layout_width="wrap_content"-->
+          <!--android:layout_height="wrap_content"-->
+          <!--app:src="@drawable/ic_smile"-->
+          <!--app:color="@color/orange"-->
+          <!--app:bottom_text="Home"-->
+          <!--android:id="@+id/jpbt"-->
+          <!--android:background="@color/cardview_shadow_start_color"/>-->
+
+      <!--<com.example.demo.practice.widget.PhoneRingView-->
+          <!--android:layout_width="wrap_content"-->
+          <!--android:layout_height="wrap_content"-->
+          <!--app:phone_color="@color/orange"-->
+          <!--android:background="@color/black"-->
+          <!--android:id="@+id/phone"/>-->
+     <com.example.demo.practice.widget.BlurImageView
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:scaleType="center"
+         android:id="@+id/blur_image"
+         android:src="@drawable/zoro"/>
+      <SeekBar
+          android:layout_width="400dp"
+          android:layout_height="100dp"
+          android:id="@+id/seekbar"/>
+
+
 
       <!--<com.example.demo.practice.widget.WaveBall-->
           <!--android:layout_width="200dp"-->
