--- a/app/src/main/res/layout/activity_custom_viewgroup_layout.xml
+++ b/app/src/main/res/layout/activity_custom_viewgroup_layout.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <com.example.demo.practice.widget.CustomViewGroup
@@ -45,6 +46,43 @@
         android:id="@+id/layout_manage_rv">
 
     </android.support.v7.widget.RecyclerView>
+
+    <com.example.demo.practice.widget.PopupLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+       >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/orange"
+            android:gravity="center"
+            android:textSize="32sp"
+            android:id="@+id/stop_tv"
+            android:tag="停止"
+            android:text="停止"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/pink"
+            android:gravity="center"
+            android:textSize="32sp"
+            android:id="@+id/record_tv"
+            android:tag="录播"
+            android:text="录播"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            android:gravity="center"
+            android:textSize="32sp"
+            android:id="@+id/start_tv"
+            android:tag="开始"
+            android:text="开始"/>
+
+
+
+    </com.example.demo.practice.widget.PopupLayout>
 
 
 </LinearLayout>
