--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -143,6 +143,28 @@
             android:layout_column="1"
             android:gravity="center"
             />
+        <TextView
+            android:background="@drawable/button_bg"
+            android:layout_marginTop="12dp"
+            android:text="View/RecyclerViewTest"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="24sp"
+            android:id="@+id/re_test"
+            android:layout_row="6"
+            android:layout_column="0"
+            android:gravity="center"
+            />
+        <TextView
+            android:background="@drawable/button_bg"
+            android:layout_marginTop="12dp"
+            android:text="View/TouchEvent"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="24sp"
+            android:id="@+id/touch_test"
+            android:layout_row="6"
+            android:layout_column="1"
+            android:gravity="center"
+            />
     </GridLayout>
 
 
